# so_long

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
includes/: so_long.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
srcs/: enemies_logic.c  enemies_move.c  enemies_spawn.c  flood_fill.c  game.c  hooks.c  main.c  parse.c  player.c  utils.c  validate.c
textures/: button.xpm  enemy.xpm  exit.xpm  exp1.xpm  exp2.xpm  floor.xpm  p_left.xpm  p_right.xpm  wall.xpm
textures/png/: COIN1708021236.xpm
